# codekids

./: .env  .env.example  .gitignore  Dockerfile  Dockerfile.prod  README.md  bun.lockb  codekids-db-2025-03-07.bak  docker-compose.yml  flake.nix  next.config.js  package-lock.json  package.json  tailwind.config.js
backend/: .dockerignore  .env.example  .gitignore  .requirements.txt.un~  Dockerfile  auth.py  codekids-db-data.bak  db.py  docker-compose.yml  generate_openapi.py  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  requirements.txt~  schema.prisma
backend/db/migrations/manual/: page-table-PR.sql
backend/minio/: file_uploader.py  test.txt
backend/prisma/: partial_types.py  schema.prisma
backend/prisma/migrations/20240207173148_auth/: migration.sql
backend/prisma/migrations/20240211203209_user_optional/: migration.sql
backend/prisma/migrations/20240219075500_added_prev_page/: migration.sql
backend/prisma/migrations/20240223163257_/: migration.sql
backend/prisma/migrations/20240308194925_pagenum/: migration.sql
backend/prisma/migrations/20240309201123_book_cover/: migration.sql
backend/prisma/migrations/20240317152836_book_owner/: migration.sql
backend/prisma/migrations/20240318145944_book_published/: migration.sql
backend/prisma/migrations/20240318162912_book_editor/: migration.sql
backend/src/: auth.py  config.py  db.py  main.py
backend/src/routers/: __init__.py  auth.py  books.py  chatbot.py  courses.py  images.py  interactions.py  pages.py
backend/src/util/: data_migrate.py
backups/: Dockerfile  (+3 more)
(+311 files in other folders)
